--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "url": "https://github.com/335296558/vite-plugin-auto-vue-router"
   },
   "dependencies": {
-    "fast-glob": "^3.2.11"
+    "fast-glob": "^3.2.11",
+    "vite-plugin-auto-vue-router": "^1.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.16.10",
@@ -28,7 +29,6 @@
   "scripts": {
     "build": "env ENV=prod rollup -c",
     "dev": "rollup -c -w",
-    "test": "node test/test.js",
     "pretest": "npm run build",
     "deploy": "npm publish --registry=https://registry.npmjs.org/",
     "remove": "npm unpublish --registry https://registry.npmjs.org/ vite-plugin-auto-vue-router@请输入你的版本号",
