--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "deprecate": "npm deprecate vite-plugin-auto-vue-router@'< 3.1.3' 'critical bug fixed in v3.1.3'"
   },
   "dependencies": {
+    "js-yaml": "^4.1.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@types/node": "^20.8.8",
     "@vitejs/plugin-vue": "^4.5.1",
+    "fast-glob": "^3.3.2",
     "path": "^0.12.7",
     "rollup-plugin-copy": "^3.5.0",
     "sass": "^1.69.5",
