--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "./package.json": "./package.json"
   },
   "scripts": {
-    "dev": "vite build && vite dev demo watch vite build",
-    "dev2": "vite build && vite dev demo2 watch vite build",
+    "dev": "vite dev demo watch vite build",
     "build": "vite build && vite build demo",
     "preview": "vite preview demo",
     "deploy": "npm publish --registry=https://registry.npmjs.org/",
@@ -37,7 +36,8 @@
     "path": "^0.12.7",
     "rollup-plugin-copy": "^3.5.0",
     "sass": "^1.69.5",
-    "vite": "^5.0.5"
+    "vite": "^5.0.5",
+    "vite-plugin-auto-vue-router": "^2.0.2"
   },
   "vite": {
     "plugins": [
