--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-plugin-auto-vue-router",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "type": "module",
   "files": [
     "dist"
@@ -16,7 +16,7 @@
     "./package.json": "./package.json"
   },
   "scripts": {
-    "dev": "vite dev demo watch vite build",
+    "dev": "vite build && vite dev demo",
     "build": "vite build && vite build demo",
     "preview": "vite preview demo",
     "deploy": "npm publish --registry=https://registry.npmjs.org/",
